# qpath

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  dist-workspace.toml
.github/: mergify.yml
.github/workflows/: ci.yml  elisp.yml
lisp/: qpath.el
src/: commands.rs  dirs.rs  edit.rs  load.rs  main.rs  model.rs  template.rs  vsort.rs
tests/: cli.rs  qpath-test.el
